--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "sameplace-js",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "a simple gps coordinate transformer.",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "babel sameplace.js -o main.js"
   },
   "repository": {
     "type": "git",
