--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "sameplace-js",
   "version": "0.0.1",
   "description": "a simple gps coordinate transformer.",
-  "main": "main.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel sameplace.js -o main.js"
+    "build": "babel sameplace.js -o index.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
+    "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
     "babel-preset-env": "^1.5.2"
   }
 }
